@@ -90,7 +90,7 @@ public class RAGTool implements Tool {
             public Object parse(Object o) {
 		try {
                 	List<ModelTensors> mlModelOutputs = (List<ModelTensors>) o;
-                	Map<String, ?> dataAsMap = mlModelOutputs.getFirst().getMlModelTensors().getFirst().getDataAsMap();
+                	Map<String, ?> dataAsMap = mlModelOutputs.get(0).getMlModelTensors().get(0).getDataAsMap();
                 	// Return the response field if it exists, otherwise return the whole response as json string.
                 	if (dataAsMap.containsKey(responseField)) {
                     	    return dataAsMap.get(responseField);
